--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 	</footer>
 
 	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-	<script src="data/power-plants.js"></script>
+	<script src="power-plants.js"></script>
 
 
 
